--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Portfolio website Design</title>
+    <title>AZ Motor Spare</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
@@ -26,6 +26,7 @@
                         <li><a href="https://docs.google.com/spreadsheets/d/1u3XrYHpKSV3sfhJ1Kb3WubWBg_4hlQD6_fRQfxRldBc/edit?usp=sharing">Sales</a></li>
                         <li><a href="#">Stock</a></li>
                         <li><a href="#">Orders</a></li>
+                        <li><a href="#">40% Saving</a></li>
                         <li><a href="https://docs.google.com/spreadsheets/d/1u3XrYHpKSV3sfhJ1Kb3WubWBg_4hlQD6_fRQfxRldBc/edit?usp=sharing">Suppliers & Sales Amount</a></li>
 
                         <li><a href="https://shopme.mv/portal"><img src="shopmelogo.png" width="40px" height="40px" /></a></li>
