--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <li><a href="https://docs.google.com/spreadsheets/d/1u3XrYHpKSV3sfhJ1Kb3WubWBg_4hlQD6_fRQfxRldBc/edit?usp=sharing">Sales</a></li>
                         <li><a href="#">Stock</a></li>
                         <li><a href="#">Orders</a></li>
-                        <li><a href="#">40% Saving</a></li>
+                        <li><a href="https://docs.google.com/spreadsheets/d/1-chUgjmGz6clpWRBg7REoZlPsVy9piBGZwiWRSfghXQ/edit?usp=sharing">40% Saving</a></li>
                         <li><a href="https://docs.google.com/spreadsheets/d/1u3XrYHpKSV3sfhJ1Kb3WubWBg_4hlQD6_fRQfxRldBc/edit?usp=sharing">Suppliers & Sales Amount</a></li>
 
                         <li><a href="https://shopme.mv/portal"><img src="shopmelogo.png" width="40px" height="40px" /></a></li>
