--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="social">
                         <a href="https://www.facebook.com/azmotorspare"><i class="fa-brands fa-facebook"></i></a>
                         <a href="https://www.instagram.com/az_motorspare.mv?igsh=YzQxa2o3MjI4MWRz&utm_source=qr"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="#"><i class="fa-brands fa-telegram"></i></a>
+                        <a href="https://t.me/SP0639"><i class="fa-brands fa-telegram"></i></a>
                         <a href="https://wa.me/9607705120"><i class="fa-brands fa-whatsapp"></i></a>
                         <a href="#"><i class="fa-brands fa-tiktok"></i></a>
                     </div>
