--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <li><a href="#">Stock</a></li>
                         <li><a href="#">Orders</a></li>
                         <li><a href="https://docs.google.com/spreadsheets/d/1-chUgjmGz6clpWRBg7REoZlPsVy9piBGZwiWRSfghXQ/edit?usp=sharing">40% Saving</a></li>
-                        <li><a href="https://docs.google.com/spreadsheets/d/1u3XrYHpKSV3sfhJ1Kb3WubWBg_4hlQD6_fRQfxRldBc/edit?usp=sharing">Sales & Expenses Amount</a></li>
+                        <li><a href="https://docs.google.com/spreadsheets/d/11zwkN6qEF4Obnj6OPiMwpJ6iJXnsJYpAIvLmQup2RZU/edit?usp=sharing">Accounts</a></li>
 
                         <li><a href="https://shopme.mv/portal"><img src="shopmelogo.png" width="40px" height="40px" /></a></li>
                         <li><a href="https://www.lazada.com.my/muwei-genuine-store/?q=All-Products&from=wangpu&langFlag=en&pageTypeId=2"><img src="lazada logo.jpg" width="40px" height="40px" /></a></li>
