--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                     </div>
                     <ui class="navlinks">
                         <li><a href="spare.html"><img src="AZ Spare.jpg" width="40px" height="40px" /></a></li>
-                        <li><a href="#"><img src="Unique Closet.jpg" width="50px" height="40px" /></a></li>
-                        <li><a href="#"><img src="final AZV.jpg" width="50px" height="40px" /></a></li>
+                        <li><a href="Uniqcloset.html"><img src="Unique Closet.jpg" width="50px" height="40px" /></a></li>
+                        <li><a href="variety.html"><img src="final AZV.jpg" width="50px" height="40px" /></a></li>
                     </ui>
                     
                 </nav>
