--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <header>
                 <div class="logo">
                     <i class="">SP</i>
-                    <div class="logo-text">0639/2014 </div>
+                    <div class="logo-text">SP-0639/2014 </div>
                 </div>
                 <nav>
                     <div class="togglebtn">
