--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AZ Motor Spare</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 <body>
@@ -31,7 +31,7 @@
             </header>
             <div class="container">
                 <div class="hero-pic">
-                    <img src="logo.png.png" alt="" srcset="profile pic">
+                    <img src="last logo.jpg" alt="" srcset="profile pic">
                 </div>
                 <div class="hero-text">
                     <h5><span class="input">LAST HUNT </span></h5>
@@ -60,7 +60,7 @@
 
 
   var typed=new Typed(".input",{
-    strings:["Frontend Developer","LAST HUNT","SP-0639/2014"],
+    strings:["","LAST HUNT","SP-0639/2014"],
     typedSpeed:2,
     backSpeed:50,
     loop:true
