--- a/spare.html
+++ b/spare.html
@@ -47,8 +47,8 @@
                        We are offer high quantity automotive spare parts, at affordable rates here in Maldives.
                     </p>
                     <div class="btn-group">
-                        <a href="./CALCULATE/index.html" class="btn active">Calculate Orders</a>
-                        <a href="#" class="btn">Contact</a>
+                        <a href="./CALCULATE/index.html" class="btn active">Products</a>
+                        <a href="index.html" class="btn">Home Page</a>
                     </div>
                     <div class="social">
                         <a href="https://www.facebook.com/azmotorspare"><i class="fa-brands fa-facebook"></i></a>
