--- a/Uniqcloset.html
+++ b/Uniqcloset.html
@@ -52,10 +52,10 @@
                     </div>
                     <div class="social">
                         <a href="https://www.facebook.com/profile.php?id=61566636058697&mibextid=LQQJ4d&mibextid=LQQJ4d"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/unikcloset.mv/"><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://t.me/SP0639"><i class="fa-brands fa-telegram"></i></a>
                         <a href="https://wa.me/9607705120"><i class="fa-brands fa-whatsapp"></i></a>
-                        <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+                        <a href="https://www.tiktok.com/@unikcloset?_t=8s6bwmyO1Op&_r=1"><i class="fa-brands fa-tiktok"></i></a>
                     </div>
                 </div>
             </div>
