--- a/Uniqcloset.html
+++ b/Uniqcloset.html
@@ -47,7 +47,7 @@
                        We are Selling high quality products, at affordable rates here in Maldives.
                     </p>
                     <div class="btn-group">
-                        <a href="#" class="btn active">Products</a>
+                        <a href="PAY/public/index.html" class="btn active">Products</a>
                         <a href="index.html" class="btn">Home Page</a>
                     </div>
                     <div class="social">
