--- a/PAY/public/index.html
+++ b/PAY/public/index.html
@@ -100,7 +100,9 @@
             class="product-img"
           />
           <h2 class="product-title">Men's Beach Pants</h2>
-          <span class="price">MVR50</span>
+          <span class="price">MVR240</span>
+          <span class="original-price">MVR300</span>
+          <span class="discount">20% off</span>
           <i class="bx bx-shopping-bag add-cart"></i>
         </div>
         <!-- Box 2 -->
@@ -111,7 +113,9 @@
             class="product-img"
           />
           <h2 class="product-title">Men's Elastic Surfing Beach Pants</h2>
-          <span class="price">MVR70.99</span>
+          <span class="price">MVR240</span>
+          <span class="original-price">MVR300</span>
+          <span class="discount">20% off</span>
           <i class="bx bx-shopping-bag add-cart"></i>
         </div>
         <!-- Box 3 -->
