--- a/PAY/public/index.html
+++ b/PAY/public/index.html
@@ -53,7 +53,7 @@
       <!-- Nav -->
       <div class="nav container">
         <!-- Logo -->
-        <a href="/Uniqcloset.html" class="logo">Unik Closet</a>
+        <a href="" class="logo">Unik Closet</a>
         <!-- Cart Icon -->
         <i class="bx bx-shopping-bag" id="cart-icon" data-quantity="0"></i>
         <!-- cart -->
