--- a/PAY/public/index.html
+++ b/PAY/public/index.html
@@ -53,7 +53,7 @@
       <!-- Nav -->
       <div class="nav container">
         <!-- Logo -->
-        <a href="/Uniqcloset.html" class="btn">Unik Closet</a>
+        <a href="#" class="logo">Unik Closet</a>
         <!-- Cart Icon -->
         <i class="bx bx-shopping-bag" id="cart-icon" data-quantity="0"></i>
         <!-- cart -->
@@ -126,7 +126,7 @@
             class="product-img"
           />
           <h2 class="product-title">Men's Plain Waffle T-Shirt</h2>
-          <span class="price">MVR24.98</span>
+          <span class="price">MVR300</span>
           <i class="bx bx-shopping-bag add-cart"></i>
         </div>
         <!-- Box 4 -->
@@ -137,7 +137,7 @@
             class="product-img"
           />
           <h2 class="product-title">Men's Plain Waffle T-Shirt</h2>
-          <span class="price">MVR100</span>
+          <span class="price">MVR300</span>
           <i class="bx bx-shopping-bag add-cart"></i>
         </div>
         <!-- Box 5 -->
@@ -148,7 +148,7 @@
             class="product-img"
           />
           <h2 class="product-title">Men's Plain Waffle T-Shirt</h2>
-          <span class="price">MVR80.50</span>
+          <span class="price">MVR300</span>
           <i class="bx bx-shopping-bag add-cart"></i>
         </div>
         <!-- Box 6 -->
@@ -159,7 +159,7 @@
             class="product-img"
           />
           <h2 class="product-title">Slipper New Style</h2>
-          <span class="price">MVR200</span>
+          <span class="price">MVR250</span>
           <i class="bx bx-shopping-bag add-cart"></i>
         </div>
         <!-- Box 7 -->
@@ -170,7 +170,7 @@
             class="product-img"
           />
           <h2 class="product-title">Slipper New Style</h2>
-          <span class="price">MVR80.04</span>
+          <span class="price">MVR250</span>
           <i class="bx bx-shopping-bag add-cart"></i>
         </div>
         <!-- Box 8 -->
