--- a/PAY/public/index.html
+++ b/PAY/public/index.html
@@ -94,6 +94,7 @@
       <div class="shop-content">
         <!-- Box 1 -->
         <div class="product-box">
+          <div class="new-arrival">New Arrival</div>
           <img
             src="./img/unikcloset/Men's Beach Pants.jpg"
             alt=""
@@ -107,6 +108,7 @@
         </div>
         <!-- Box 2 -->
         <div class="product-box">
+          <div class="new-arrival">New Arrival</div>
           <img
             src="../public/img/unikcloset/Men's Elastic Surfing Beach Pants.jpg"
             alt=""
@@ -120,6 +122,7 @@
         </div>
         <!-- Box 3 -->
         <div class="product-box">
+          <div class="new-arrival">New Arrival</div>
           <img
             src="../public/img/unikcloset/Men's Plain Waffle T-shirt Black.jpg"
             alt=""
