--- a/PAY/public/index.html
+++ b/PAY/public/index.html
@@ -122,7 +122,7 @@
         </div>
         <!-- Box 3 -->
         <div class="product-box">
-          <div class="new-arrival">New Arrival</div>
+          <div class="new-arrival">Out Of Stock</div>
           <img
             src="../public/img/unikcloset/Men's Plain Waffle T-shirt Black.jpg"
             alt=""
@@ -134,6 +134,7 @@
         </div>
         <!-- Box 4 -->
         <div class="product-box">
+          <div class="new-arrival">Out Of Stock</div>
           <img
             src="../public/img/unikcloset/Men's Plain Waffle T-shirt Brown.jpg"
             alt=""
@@ -184,6 +185,17 @@
             class="product-img"
           />
           <h2 class="product-title">Rain Coat Waterproof - Women's</h2>
+          <span class="price">MVR280</span>
+          <i class="bx bx-shopping-bag add-cart"></i>
+        </div>
+         <!-- Box 9 -->
+         <div class="product-box">
+          <img
+            src="..//public/img/unikcloset/Rain Coats/RAIN COATS WITH PANTS.jpg"
+            alt=""
+            class="product-img"
+          />
+          <h2 class="product-title">Rain Coat&Pant Waterproof - Men's</h2>
           <span class="price">MVR280</span>
           <i class="bx bx-shopping-bag add-cart"></i>
         </div>
