--- a/spare.html
+++ b/spare.html
@@ -24,8 +24,8 @@
                     <ui class="navlinks">
                         <li><a href="https://docs.google.com/spreadsheets/d/19ilY2D67Z8YXgGv15hy6KRj8zEoB9BsupN1_O-pkgic/edit?usp=sharing">Sales</a></li>
                         <li><a href="https://docs.google.com/spreadsheets/d/12dlzi6g4Rum6kERjf0ntAPoXxOLKOPQmpUfmXbS9AuY/edit?usp=sharing">Expenses</a></li>
-                        <li><a href="#">Stock</a></li>
-                        <li><a href="#">Orders</a></li>
+                        <li><a href="Sales.html">Sales</a></li>
+                        <li><a href="Data.html">Data</a></li>
                         <li><a href="https://docs.google.com/spreadsheets/d/1-chUgjmGz6clpWRBg7REoZlPsVy9piBGZwiWRSfghXQ/edit?usp=sharing">40% Saving</a></li>
                         <li><a href="https://docs.google.com/spreadsheets/d/11zwkN6qEF4Obnj6OPiMwpJ6iJXnsJYpAIvLmQup2RZU/edit?usp=sharing">Accounts</a></li>
 
